#    This file is part of Dokkoo.
#
#    Dokkoo is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Dokkoo is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["edition2021", "strip"]
[package]
name = "dokkoo"
version = "0.3.1"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "parser-implementations", "text-processing"]
exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml", "/rust-toolchain"]
license = "AGPL-3.0-or-later"
description = "Mokk (Macro Output Key Kit) implementation written in Rust."
repository = "https://github.com/Dirout/dokkoo"
homepage = "https://github.com/Dirout/dokkoo"
readme = "README"

[lib]
name = "dokkoo"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "dokkoo"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
clap = { version = "3.0.0-beta.4", features = ["suggestions", "color", "wrap_help"] }
derive_more = { version = "0.99.16", features = ["convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
futures = "0.3.16"
glob = "0.3.0"
lazy_static = "1.4.0"
liquid = "0.22.0"
liquid-core = "0.22.0"
liquid-lib = { version = "0.22.0", features = ["stdlib", "jekyll", "shopify", "extra"] }
mimalloc = { version = "0.1.26", default-features = false }
notify = "4.0.17"
pathdiff = "0.2.0"
pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
serde = "1.0.127"
serde_yaml = "0.8.21"
stopwatch = "0.0.7"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/dokkoo", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libdokkoo.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/dokkoo/README", "644"],
    ["COPYING", "usr/share/doc/dokkoo/COPYING", "644"],
]

[package.metadata.rpm]
package = "dokkoo"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
dokkoo = { path = "/usr/bin/dokkoo" }
