#    This file is part of Dokkoo.
#
#    Dokkoo is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Dokkoo is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "dokkoo"
version = "0.3.3"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "parser-implementations", "text-processing"]
exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml", "/rust-toolchain"]
license = "AGPL-3.0-or-later"
description = "Mokk (Macro Output Key Kit) implementation written in Rust."
repository = "https://github.com/Dirout/dokkoo"
homepage = "https://github.com/Dirout/dokkoo"
readme = "README"

[lib]
name = "dokkoo"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "dokkoo"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.2.2"
actix-service = "2.0.2"
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
clap = { version = "4.0.1", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
futures = "0.3.24"
glob = "0.3.0"
lazy_static = "1.4.0"
liquid = "0.26.0"
liquid-core = "0.26.0"
liquid-lib = { version = "0.26.0", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
miette = { version = "5.3.0", features = ["fancy"] }
mimalloc = { version = "0.1.29", default-features = false }
notify = "5.0.0"
pathdiff = "0.2.1"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
relative-path = "1.7.2"
serde = "1.0.145"
serde_yaml = "0.9.13"
stopwatch = "0.0.7"
tokio = { version = "1.21.1", features = ["full"] }
wild = "2.1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/dokkoo", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libdokkoo.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/dokkoo/README", "644"],
    ["COPYING", "usr/share/doc/dokkoo/COPYING", "644"],
]

[package.metadata.rpm]
package = "dokkoo"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
dokkoo = { path = "/usr/bin/dokkoo" }
