#    This file is part of Dokkoo.
#
#    Dokkoo is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Dokkoo is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
[package]
name = "dokkoo"
version = "0.5.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "text-processing", "web-programming"]
exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml", "/rust-toolchain"]
license = "AGPL-3.0-or-later"
description = "Mokk (Macro Output Key Kit) implementation written in Rust."
repository = "https://github.com/Dirout/dokkoo"
homepage = "https://github.com/Dirout/dokkoo"
readme = "README"

[lib]
name = "dokkoo"
path = "src/lib.rs"
crate-type=["rlib", "cdylib", "staticlib"]

[[bin]]
name = "dokkoo"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-http = "3.6.0"
actix-service = "2.0.2"
actix-web = "4.4.1"
ahash = { version = "0.8.7", features = ["std", "serde", "runtime-rng"] }
chrono = { version = "0.4.33", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
clap = { version = "4.4.18", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
comrak = { version = "0.19.0", features = ["syntect", "shortcodes"] }
derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
futures = "0.3.30"
glob = "0.3.1"
html-minifier = "4.0.0"
latex2mathml = "0.2.3"
lazy_static = "1.4.0"
liquid = "0.26.4"
liquid-core = "0.26.4"
liquid-lib = { version = "0.26.4", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
miette = { version = "5.10.0", features = ["fancy"] }
mimalloc = { version = "0.1.39", default-features = false }
notify = "6.1.1"
path-clean = "1.0.1"
pathdiff = "0.2.1"
relative-path = "1.9.2"
serde = "1.0.196"
serde_yaml = "0.9.31"
sys-locale = "0.3.1"
ticky = { version = "1.0.2", features = ["stdtime"] }
tokio = { version = "1.36.0", features = ["full"] }
wild = "2.2.1"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/dokkoo", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libdokkoo.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/dokkoo/README", "644"],
    ["COPYING", "usr/share/doc/dokkoo/COPYING", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/dokkoo", dest = "/usr/bin/dokkoo", mode = "755" },
  { source = "target/release/libdokkoo.so", dest = "/usr/lib/libdokkoo.so", mode = "755" },
  { source = "target/release/libdokkoo.a", dest = "/usr/lib/libdokkoo.a", mode = "755" },
  { source = "README", dest = "/usr/share/doc/dokkoo/README", mode = "644" },
  { source = "COPYING", dest = "/usr/share/doc/dokkoo/COPYING", mode = "644" },
]

[registries.crates-io]
protocol = "sparse"
